ipc/ipdl/test/ipdl/ok/PUniquePtrOfActors.ipdl
include protocol PUniquePtrOfActorsSub;

[ChildProc=any]
protocol PUniquePtrOfActors {
    manages PUniquePtrOfActorsSub;

child:
    async Msg(UniquePtr<PUniquePtrOfActorsSub> p);

    async PUniquePtrOfActorsSub();
};
